--- a/notebooks/metrics.ipynb
+++ b/notebooks/metrics.ipynb
@@ -18,6 +18,9 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "\n",
+    "import warnings\n",
+    "\n",
     "from datasets import load_dataset"
    ]
   },
@@ -34,7 +37,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "ea754edd-6ade-4ab0-9b37-342f25d5a913",
+   "id": "dab702da-f376-4b44-bd3f-c0fccb99a9da",
    "metadata": {},
    "outputs": [
     {
@@ -58,28 +61,76 @@
     }
    ],
    "source": [
-    "ds "
+    "ds"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "b2976e64-dfe3-459e-829f-396c83522dbc",
+   "execution_count": 4,
+   "id": "ea754edd-6ade-4ab0-9b37-342f25d5a913",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def convert_dataset_to_list_format(dataset_dict):\n",
+    "    train_ds_, test_ds_ = [], []\n",
+    "    \n",
+    "    # Process train split\n",
+    "    for sample in dataset_dict['train']:\n",
+    "        if sample['answer'] is not None:\n",
+    "            train_ds_.append({\n",
+    "                \"user_input\": sample['question'],\n",
+    "                \"response\": sample['answer'],\n",
+    "                \"reference\": sample['answer'][:len(sample['answer'])-5],  # Using answer as reference for now\n",
+    "                \"retrieved_contexts\": [sample['context']],\n",
+    "                \"reference_contexts\": [sample['context']]\n",
+    "            })\n",
+    "    \n",
+    "    # Process test split\n",
+    "    for sample in dataset_dict['test']:\n",
+    "        if sample['answer'] is not None:\n",
+    "            test_ds_.append({\n",
+    "                \"user_input\": sample['question'],\n",
+    "                \"response\": sample['answer'],\n",
+    "                \"reference\": sample['answer'][:len(sample['answer'])-5],  # Using answer as reference for now\n",
+    "                \"retrieved_contexts\": [sample['context']],\n",
+    "                \"reference_contexts\": [sample['context']]\n",
+    "            })\n",
+    "    \n",
+    "    return train_ds_, test_ds_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "cac6b856-209b-46e0-a661-4e6049507061",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "# Convert the dataset\n",
+    "train_ds, test_ds = convert_dataset_to_list_format(ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "1fc6bc05-03eb-419a-9d7c-aa7432e359b8",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "9600"
+       "2399"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(ds['train']['context'])"
+    "len(test_ds) "
    ]
   },
   {
@@ -87,7 +138,7 @@
    "id": "73220a6d-2b6e-4c54-a751-7649639ae99f",
    "metadata": {},
    "source": [
-    "# [RAG (Retrieval-Augmented Generation) metrics](https://medium.com/@med.el.harchaoui/rag-evaluation-metrics-explained-a-complete-guide-dbd7a3b571a8)"
+    "# [RAG (Retrieval-Augmented Generation) metrics (LLM based)](https://medium.com/@med.el.harchaoui/rag-evaluation-metrics-explained-a-complete-guide-dbd7a3b571a8)"
    ]
   },
   {
@@ -148,111 +199,65 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 16,
-   "id": "e8986c79-7d16-4e67-b40b-a6ebce05fa4a",
+   "cell_type": "markdown",
+   "id": "ceffee02-0e78-410a-bba6-eee559b4bdc4",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "import requests\n",
-    "from langchain.document_loaders import TextLoader\n",
-    "from langchain.text_splitter import CharacterTextSplitter"
+    "# Traditional NLP metrics"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55fc3580-e3ed-43ff-8dfb-fa63c376bc83",
+   "metadata": {},
+   "source": [
+    "## String simillarity \n",
+    "\n",
+    "Metric measures the similarity between the reference and the response using traditional string distance measures such as Levenshtein, Hamming, and [Jaro](https://srinivas-kulkarni.medium.com/jaro-winkler-vs-levenshtein-distance-2eab21832fd6)\n",
+    "\n",
+    "## [BLEU](https://medium.com/nlplanet/two-minutes-nlp-learn-the-bleu-metric-by-examples-df015ca73a86)(Bilingual Evaluation Understudy)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "id": "18f9cc58-18a8-49dd-a06a-0911f438127a",
+   "execution_count": 7,
+   "id": "e3179e41-ac8c-4544-a6e2-5a4d2deaab0b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# OPEN_API_KEY = \"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\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "id": "e817009a-1ceb-4286-b959-3c815869ee05",
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "from ragas import SingleTurnSample, EvaluationDataset, evaluate\n",
+    "\n",
+    "#Traditional metrics\n",
+    "from ragas.metrics._string import NonLLMStringSimilarity, DistanceMeasure\n",
+    "from ragas.metrics import BleuScore, RougeScore\n",
+    "\n",
+    "# LLM metrics\n",
     "from ragas.llms import LangchainLLMWrapper\n",
     "from ragas.embeddings import LangchainEmbeddingsWrapper\n",
-    "from langchain_openai import ChatOpenAI\n",
-    "from langchain_openai import OpenAIEmbeddings\n",
-    "evaluator_llm = LangchainLLMWrapper(ChatOpenAI(model=\"gpt-3.5-turbo\", api_key=OPEN_API_KEY))\n",
-    "evaluator_embeddings = LangchainEmbeddingsWrapper(OpenAIEmbeddings(api_key=OPEN_API_KEY))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "c1a5be05-3e59-4fd6-a453-6bc7b7be0209",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0.13718598426177148"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "from ragas import SingleTurnSample\n",
-    "from ragas.metrics import BleuScore\n",
+    "from ragas.metrics import Faithfulness, FaithfulnesswithHHEM\n",
     "\n",
-    "test_data = {\n",
-    "    \"user_input\": \"summarise given text\\nThe company reported an 8% rise in Q3 2024, driven by strong performance in the Asian market. Sales in this region have significantly contributed to the overall growth. Analysts attribute this success to strategic marketing and product localization. The positive trend in the Asian market is expected to continue into the next quarter.\",\n",
-    "    \"response\": \"The company experienced an 8% increase in Q3 2024, largely due to effective marketing strategies and product adaptation, with expectations of continued growth in the coming quarter.\",\n",
-    "    \"reference\": \"The company reported an 8% growth in Q3 2024, primarily driven by strong sales in the Asian market, attributed to strategic marketing and localized products, with continued growth anticipated in the next quarter.\"\n",
-    "}\n",
-    "metric = BleuScore()\n",
-    "test_data = SingleTurnSample(**test_data)\n",
-    "metric.single_turn_score(test_data)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "id": "ba4c2ce3-6837-4c46-9e00-2acb374d1501",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": [
-    "config = {\n",
-    "    \"model\": \"gemini-1.5-flash\",  # or other model IDs\n",
-    "    \"temperature\": 0.4,\n",
-    "    \"max_tokens\": None,\n",
-    "    \"top_p\": 0.8,\n",
-    "    # For Vertex AI only:\n",
-    "    #\"project\": \"your-project-id\",  # Required for Vertex AI\n",
-    "    #\"location\": \"us-central1\",     # Required for Vertex AI\n",
-    "}\n",
-    "\n",
-    "Gemini_OPEN_API_KEY = \"AIzaSyAej7Q9cR5zcFginFZ16o2LBf14mxhG4Ok\""
+    "# Choose the appropriate import based on your API:\n",
+    "from langchain_google_genai import ChatGoogleGenerativeAI"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "03a81c2e-a258-4666-af9e-656e85336753",
-   "metadata": {
-    "scrolled": true
-   },
+   "id": "5927999a-d32e-41cb-97ab-b7cd7b6222d6",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "from ragas.llms import LangchainLLMWrapper\n",
-    "from ragas.embeddings import LangchainEmbeddingsWrapper\n",
-    "\n",
-    "# Choose the appropriate import based on your API:\n",
-    "from langchain_google_genai import ChatGoogleGenerativeAI\n",
-    "\n",
     "# Initialize with Google AI Studio\n",
+    "Gemini_OPEN_API_KEY = \"AIzaSyAej7Q9cR5zcFginFZ16o2LBf14mxhG4Ok\"\n",
+    "\n",
+    "config = {\n",
+    "    \"model\": \"gemini-1.5-flash\",  # or other model IDs\n",
+    "    \"temperature\": 0.4,\n",
+    "    \"max_tokens\": None,\n",
+    "    \"top_p\": 0.8,\n",
+    "}\n",
+    "\n",
     "evaluator_llm = LangchainLLMWrapper(ChatGoogleGenerativeAI(\n",
     "    model=config[\"model\"],\n",
     "    api_key = Gemini_OPEN_API_KEY,\n",
@@ -264,7 +269,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 9,
+   "id": "86d632e5-a88d-45e1-8a38-887a0d5a6bfb",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eval_ds = EvaluationDataset.from_list(test_ds)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "4bef5d1f-90a8-431d-994c-ea49ba7f3d24",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2399"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(eval_ds) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "22ae716c-c4a0-4628-801f-fb57662d24e3",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating:   0%|                            | 1/9596 [00:01<4:08:33,  1.55s/it]Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n",
+      "Setting `pad_token_id` to `eos_token_id`:50256 for open-end generation.\n"
+     ]
+    }
+   ],
+   "source": [
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "results = evaluate(dataset=eval_ds, metrics=[\n",
+    "    BleuScore(),\n",
+    "    RougeScore(),\n",
+    "    NonLLMStringSimilarity(distance_measure=DistanceMeasure.LEVENSHTEIN),\n",
+    "    #FaithfulnesswithHHEM(llm=evaluator_llm)\n",
+    "    Faithfulness(llm=evaluator_llm)\n",
+    "]\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef94edd9-3beb-48d5-929c-a094eeb62753",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "2940137e-9f6a-4327-998b-eca0a207b9c3",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.0"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scorer = Faithfulness(llm=evaluator_llm)\n",
+    "await scorer.single_turn_ascore(eval_ds[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "1cff6fa7-1759-4333-b02b-17b759f30496",
    "metadata": {},
    "outputs": [],
@@ -281,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 12,
    "id": "43e15e8d-510c-46e5-b3ce-f45b1cdc600a",
    "metadata": {},
    "outputs": [
@@ -291,7 +403,7 @@
        "1"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -305,15 +417,122 @@
     "    \"response\": \"The company experienced an 8% increase in Q3 2024, largely due to effective marketing strategies and product adaptation, with expectations of continued growth in the coming quarter.\",\n",
     "}\n",
     "\n",
-    "metric = AspectCritic(name=\"summary_accuracy\",llm=evaluator_llm, definition=\"Verify if the summary is accurate.\")\n",
+    "metric = AspectCritic(name=\"summary_accuracy\", llm=evaluator_llm, definition=\"Verify if the summary is accurate.\")\n",
     "test_data = SingleTurnSample(**test_data)\n",
     "await metric.single_turn_ascore(test_data)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "1028023d-f9ce-4c34-a03b-43a2f50be3d7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Fetching 2 files: 100%|██████████████████████████| 2/2 [28:47<00:00, 863.79s/it]\n",
+      "Loading checkpoint shards: 100%|██████████████████| 2/2 [00:12<00:00,  6.33s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "from transformers import AutoModelForCausalLM, AutoTokenizer\n",
+    "\n",
+    "model = AutoModelForCausalLM.from_pretrained(\"microsoft/phi-2\")\n",
+    "tokenizer = AutoTokenizer.from_pretrained(\"microsoft/phi-2\")\n",
+    "\n",
+    "def evaluate_rag_result(query, context, answer):\n",
+    "    inputs = tokenizer(f\"{query}\\nContext: {context}\\nAnswer: {answer}\", return_tensors=\"pt\")\n",
+    "    scores = model(**inputs).logits\n",
+    "    return scores.mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "7eab5d83-62fe-4d81-9f9e-31a3add8391a",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor(-0.0366, grad_fn=<MeanBackward0>)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "evaluate_rag_result(test_ds[0][\"user_input\"], \n",
+    "                    test_ds[0][\"retrieved_contexts\"],\n",
+    "                    test_ds[0][\"response\"],\n",
+    "                    )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "90ea3d9f-bb0c-4928-9360-db96b54533b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from transformers import pipeline "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "adfda325-e52a-4384-8ef9-479784bbee00",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Device set to use mps:0\n"
+     ]
+    }
+   ],
+   "source": [
+    "from langchain.llms import HuggingFacePipeline\n",
+    "from transformers import TextGenerationPipeline\n",
+    "\n",
+    "# Create the generation pipeline\n",
+    "generation_pipeline = pipeline(\n",
+    "    \"text-generation\",\n",
+    "    model=model,\n",
+    "    tokenizer=tokenizer,\n",
+    "    max_new_tokens=512,\n",
+    "    temperature=0.4,\n",
+    "    top_p=0.8,\n",
+    "    do_sample=True,\n",
+    "    return_full_text=False\n",
+    ")\n",
+    "\n",
+    "# Wrap in LangChain's LLM interface\n",
+    "langchain_llm = HuggingFacePipeline(pipeline=generation_pipeline)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "3ef9202d-dd4c-4f87-a4f3-e8b8d3b85491",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from ragas.llms import LangchainLLMWrapper\n",
+    "\n",
+    "evaluator_llm = LangchainLLMWrapper(langchain_llm)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "37281182-bde1-4bb4-a5af-91b524ecc803",
    "metadata": {},
    "outputs": [],
    "source": []
