--- a/notebooks/metrics.ipynb
+++ b/notebooks/metrics.ipynb
@@ -18,6 +18,7 @@
    "source": [
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import os \n",
     "\n",
     "import warnings\n",
     "\n",
@@ -230,15 +231,125 @@
     "\n",
     "#Traditional metrics\n",
     "from ragas.metrics._string import NonLLMStringSimilarity, DistanceMeasure\n",
+    "from ragas.metrics import (\n",
+    "    answer_relevancy,\n",
+    "    faithfulness,\n",
+    "    context_recall,\n",
+    "    context_precision,\n",
+    "    \n",
+    ")\n",
     "from ragas.metrics import BleuScore, RougeScore\n",
     "\n",
     "# LLM metrics\n",
     "from ragas.llms import LangchainLLMWrapper\n",
     "from ragas.embeddings import LangchainEmbeddingsWrapper\n",
-    "from ragas.metrics import Faithfulness, FaithfulnesswithHHEM\n",
+    "from ragas.metrics import Faithfulness, FaithfulnesswithHHEM, ResponseRelevancy\n",
     "\n",
     "# Choose the appropriate import based on your API:\n",
-    "from langchain_google_genai import ChatGoogleGenerativeAI"
+    "from langchain_community.chat_models import ChatOllama\n",
+    "from ragas import evaluate\n",
+    "from langchain_community.embeddings import OllamaEmbeddings"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "f2a5d017-3f97-49ca-84dd-6dd3fbae2364",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# to uload Dashboard on ragas website\n",
+    "os.environ[\"RAGAS_APP_TOKEN\"] = \"apt.4955-d3328fbcd0ba-45a7-8140-094d1ba2-fb3b7\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "85b181ab-7dc7-410c-8e82-123d6176c624",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "eval_ds = EvaluationDataset.from_list(test_ds[:4])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "3d89851a-2337-48cb-aed2-d69a61f50fbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/var/folders/tr/d1rx7zt15lzgkp2yc1nwbg100000gn/T/ipykernel_5348/3259155587.py:1: LangChainDeprecationWarning: The class `ChatOllama` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import ChatOllama``.\n",
+      "  langchain_llm = ChatOllama(model=\"llama3.2:1b\")\n",
+      "/var/folders/tr/d1rx7zt15lzgkp2yc1nwbg100000gn/T/ipykernel_5348/3259155587.py:2: LangChainDeprecationWarning: The class `OllamaEmbeddings` was deprecated in LangChain 0.3.1 and will be removed in 1.0.0. An updated version of the class exists in the :class:`~langchain-ollama package and should be used instead. To use it run `pip install -U :class:`~langchain-ollama` and import as `from :class:`~langchain_ollama import OllamaEmbeddings``.\n",
+      "  langchain_embeddings = OllamaEmbeddings(model=\"llama3.2:1b\")\n"
+     ]
+    }
+   ],
+   "source": [
+    "langchain_llm = ChatOllama(model=\"llama3.2:1b\")\n",
+    "langchain_embeddings = OllamaEmbeddings(model=\"llama3.2:1b\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "2ea97a1d-f783-4532-98ef-7a484aac7b8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Evaluating:  50%|████████████████▌                | 2/4 [00:23<00:22, 11.48s/it]Prompt fix_output_format failed to parse output: The output parser failed to parse the output including retries.\n",
+      "Prompt fix_output_format failed to parse output: The output parser failed to parse the output including retries.\n",
+      "Prompt fix_output_format failed to parse output: The output parser failed to parse the output including retries.\n",
+      "Prompt statement_generator_prompt failed to parse output: The output parser failed to parse the output including retries.\n",
+      "Exception raised in Job[3]: RagasOutputParserException(The output parser failed to parse the output including retries.)\n",
+      "Evaluating:  75%|████████████████████████▊        | 3/4 [00:29<00:09,  9.18s/it]Exception raised in Job[2]: TimeoutError()\n",
+      "Evaluating: 100%|█████████████████████████████████| 4/4 [03:00<00:00, 45.00s/it]\n"
+     ]
+    }
+   ],
+   "source": [
+    "result = evaluate(\n",
+    "  eval_ds,\n",
+    "  metrics=[\n",
+    "    # BleuScore(),\n",
+    "    # RougeScore(),\n",
+    "    # NonLLMStringSimilarity(distance_measure=DistanceMeasure.LEVENSHTEIN),\n",
+    "    #ResponseRelevancy(),\n",
+    "    # context_precision,\n",
+    "    faithfulness,\n",
+    "    # answer_relevancy,\n",
+    "    # context_recall\n",
+    "  ], \n",
+    "    llm=langchain_llm,\n",
+    "    embeddings=langchain_embeddings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "f028de48-ef26-4435-b2c6-f8752b36e1df",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'faithfulness': 0.2500}"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "result"
    ]
   },
   {
@@ -269,17 +380,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "id": "86d632e5-a88d-45e1-8a38-887a0d5a6bfb",
+   "execution_count": 7,
+   "id": "440ed3c6-0e40-47c2-8626-ebee53c5a210",
    "metadata": {},
    "outputs": [],
    "source": [
-    "eval_ds = EvaluationDataset.from_list(test_ds)"
+    "config = {\n",
+    "    \"credentials_profile_name\": \"your-profile-name\",  # E.g \"default\"\n",
+    "    \"region_name\": \"your-region-name\",  # E.g. \"us-east-1\"\n",
+    "    \"llm\": \"your-llm-model-id\",  # E.g \"anthropic.claude-3-5-sonnet-20241022-v2:0\"\n",
+    "    \"embeddings\": \"your-embedding-model-id\",  # E.g \"amazon.titan-embed-text-v2:0\"\n",
+    "    \"temperature\": 0.4,\n",
+    "}"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
+   "id": "86d632e5-a88d-45e1-8a38-887a0d5a6bfb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "4bef5d1f-90a8-431d-994c-ea49ba7f3d24",
    "metadata": {},
    "outputs": [
@@ -289,7 +414,7 @@
        "2399"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -335,7 +460,7 @@
     "    RougeScore(),\n",
     "    NonLLMStringSimilarity(distance_measure=DistanceMeasure.LEVENSHTEIN),\n",
     "    #FaithfulnesswithHHEM(llm=evaluator_llm)\n",
-    "    Faithfulness(llm=evaluator_llm)\n",
+    "    Faithfulness(llm=evaluator_llm),\n",
     "]\n",
     ")"
    ]
