--- a/week2_inference_finetune.ipynb
+++ b/week2_inference_finetune.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPkKuL5d2T7HbKwiRVJcyx+"
+      "authorship_tag": "ABX9TyN0dlwA2aonA/hxP8K3VDPl"
     },
     "kernelspec": {
       "name": "python3",
@@ -25,9 +25,7 @@
       },
       "outputs": [],
       "source": [
-        "%%capture\n",
-        "!pip install unsloth\n",
-        "!pip uninstall unsloth -y && pip install --upgrade --no-cache-dir \"unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git\""
+        "!pip install unsloth"
       ]
     },
     {
@@ -46,7 +44,8 @@
     {
       "cell_type": "code",
       "source": [
-        "model_name = \"Shodai1122/gemma-2-2b-it\""
+        "model_name = \"Shodai1122/Llama-3.2-3B-Instruct-it\"\n",
+        "#model_name = \"Shodai1122/gemma-2-2b-it\""
       ],
       "metadata": {
         "id": "WlbjcL3mGAPF"
@@ -65,8 +64,7 @@
         "    model_name = model_name,\n",
         "    max_seq_length = max_seq_length,\n",
         "    dtype = dtype,\n",
-        "    load_in_4bit = load_in_4bit,\n",
-        "    token = \"\", #input your hg key here\n",
+        "    load_in_4bit = load_in_4bit\n",
         ")\n",
         "FastLanguageModel.for_inference(model)"
       ],
@@ -142,7 +140,7 @@
     {
       "cell_type": "code",
       "source": [
-        "with open(f\"gemma-2-2b-it_output.jsonl\", 'w', encoding='utf-8') as f:\n",
+        "with open(f\"Llama-3.2-3B-Instruct-it_output.jsonl\", 'w', encoding='utf-8') as f:\n",
         "    for result in results:\n",
         "        json.dump(result, f, ensure_ascii=False)\n",
         "        f.write('\\n')"
