--- a/week2_inference.ipynb
+++ b/week2_inference.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyPdV1Ca6d9Ot0BQUNq34olp"
+      "authorship_tag": "ABX9TyNKfcNS4si3cKwYB/ngxCoB"
     },
     "kernelspec": {
       "name": "python3",
@@ -43,7 +43,8 @@
     {
       "cell_type": "code",
       "source": [
-        "model_id = \"google/gemma-2-2b\"\n",
+        "#model_id = \"google/gemma-2-2b\"\n",
+        "model_id = \"meta-llama/Llama-3.2-3B-Instruct\"\n",
         "\n",
         "tokenizer = AutoTokenizer.from_pretrained(model_id)\n",
         "\n",
@@ -126,7 +127,7 @@
     {
       "cell_type": "code",
       "source": [
-        "with open(f\"gemma-2-2b_output.jsonl\", 'w', encoding='utf-8') as f:\n",
+        "with open(f\"Llama-3.2-3B-Instruct_output.jsonl\", 'w', encoding='utf-8') as f:\n",
         "    for result in results:\n",
         "        json.dump(result, f, ensure_ascii=False)\n",
         "        f.write('\\n')"
